Adding new features

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>KII Global</title>
 </head>
 
-<body class="min-h-screen">
+<body class="min-h-screen bg-primary w-full">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
