Adding new features

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/kiicon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="KII Global" />
     <link href="https://fonts.cdnfonts.com/css/gotham-6?styles=103309,103316" rel="stylesheet">
     <title>KII Global</title>
 </head>
