--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="KII Global" />
     <link href="https://fonts.cdnfonts.com/css/gotham-6?styles=103309,103316" rel="stylesheet">
+    <link rel="preload" href="https://fonts.cdnfonts.com/css/gotham-6?styles=103309,103316" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="./src/assets/robot.webp" as="script">
     <title>KII Global</title>
 </head>
 
