--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.cdnfonts.com/css/gotham-6?styles=103309,103316" rel="stylesheet">
     <link rel="preload" href="https://fonts.cdnfonts.com/css/gotham-6?styles=103309,103316" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <link rel="preload" href="./src/assets/robot.webp" as="script">
+    <link rel="preload" href="./src/assets/robot.webp" as="image">
     <title>KII Global</title>
 </head>
 
