--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="KII Global" />
     <link rel="preload" href="./src/assets/robot.webp" as="image">
-    <link rel="preload" href="/fonts/gotham-bold-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous"></link>
+    <link rel="preload" href="/fonts/gotham-bold-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <title>KII Global</title>
 </head>
 
