--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="KII Global" />
     <link rel="preload" href="./src/assets/robot.webp" as="image">
     <link rel="preload" href="/fonts/gotham-bold-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/gotham-book-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <title>KII Global</title>
 </head>
 
